Post sana updats.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,29 @@
         <section id="experience">
             <h2>Experience</h2>
             <dl class="experience">
+                <div class="item sana">
+                    <dt>
+                        <a href="https://sanabenefits.com" class="employer" target="new">Sana Benefits</a>
+                        <p class="print-url">https://sanabenefits.com</p>
+                        <div>
+                            <h3 class="job-title">Senior Full Stack Engineer</h3>
+                            <span class="date-range">November 2022 - November 2023</span>
+                        </div>
+                    </dt>
+                    <dd>
+                        <ul>
+                            <li class="achievement">
+                                Reduced cost-to-serve Sana customers by 13% through task automation and addition of 
+                            </li>
+                            <li>Automated 95% of the customer onboarding process.</li>
+                        </ul>
+                        <ul>
+                            <li>Development of new user-facing and internal features using Ruby, Javascript, HTML and CSS</li>
+                            <li>Technical leadership and direction of a team of seven junior and mid-level engineers</li>
+                            <li>Collaboration with product, design, and operations to design and scope new features and improvements.</li>
+                        </ul>
+                    </dd>
+                </div>
                 <div class="item berg">
                     <dt>
                         <a href="https://www.med.unc.edu/genetics/berglab/" class="employer" target="new">UNC Department of Genetics Berg Lab</a>
