--- a/traditional.html
+++ b/traditional.html
@@ -34,7 +34,7 @@
         <section id="summary" class="summary">
             <h2>Summary</h2>
             <ul>
-                <li>Full stack developer with 20 years of experience building web-based applications</li>
+                <li>Full stack developer with 22 years of experience building web-based applications</li>
                 <li>Fluent in modern development practices</li>
                 <li>Passionate about building usable, performant, and maintainable software</li>
                 <li>Independent self-starter who likes working with other passionate people</li>
@@ -43,7 +43,30 @@
         <section id="experience">
             <h2>Experience</h2>
             <dl class="experience">
-                <div class="item berg">
+                <div class="item sana">
+                    <dt>
+                        <a href="https://sanabenefits.com" class="employer" target="new">Sana Benefits</a>
+                        <p class="print-url">https://sanabenefits.com</p>
+                        <div>
+                            <h3 class="job-title">Senior Full Stack Engineer</h3>
+                            <span class="date-range">November 2022 - November 2023</span>
+                        </div>
+                    </dt>
+                    <dd>
+                        <ul>
+                            <li class="achievement">
+                                Reduced cost-to-serve Sana customers by X% through task automation and addition of 
+                            </li>
+                            <li>Automated 95% of the customer onboarding process.</li>
+                        </ul>
+                        <ul>
+                            <li>Development of new user-facing and internal features using Ruby, Javascript, HTML and CSS</li>
+                            <li>Technical leadership and direction of a team of seven junior and mid-level engineers</li>
+                            <li>Collaboration with product, design, and operations to design and scope new features and improvements.</li>
+                        </ul>
+                    </dd>
+                </div>
+                <div class="item sheps">
                     <dt>
                         <a href="https://www.med.unc.edu/genetics/berglab/" class="employer" target="new">UNC Department of Genetics Berg Lab</a>
                         <p class="print-url">https://www.med.unc.edu/genetics/berglab/</p>
@@ -159,11 +182,11 @@
                     </dt>
                     <dd>
                         <ul> 
-                          <li>Conduct user research to determine user needs</li> 
-                          <li>Work with software engineers, graphic designers, and stakeholders to design software services and applications for Lulu.com users</li> 
-                          <li>Conduct user testing to assess usability and user perceptions</li> 
-                          <li>Monitor analytics data to evaluate efficacy of iterative design changes</li> 
-                          <li>Implement design for web browsers using XHTML, CSS, JavaScript, and Adobe Flex</li> 
+                            <li>Conduct user research to determine user needs</li> 
+                            <li>Work with software engineers, graphic designers, and stakeholders to design software services and applications for Lulu.com users</li> 
+                            <li>Conduct user testing to assess usability and user perceptions</li> 
+                            <li>Monitor analytics data to evaluate efficacy of iterative design changes</li> 
+                            <li>Implement design for web browsers using XHTML, CSS, JavaScript, and Adobe Flex</li> 
                         </ul> 
                     </dd>
                 </div>
@@ -178,8 +201,8 @@
                     </dt>
                     <dd>
                         <ul> 
-                          <li>Design and implementation of web applications</li> 
-                          <li>Research, development, and execution of new technologies and applications including RSS, podcasting, blogging software and BitTorrent</li> 
+                            <li>Design and implementation of web applications</li> 
+                            <li>Research, development, and execution of new technologies and applications including RSS, podcasting, blogging software and BitTorrent</li> 
                         </ul> 
                     </dd>
                 </div>
@@ -274,24 +297,28 @@
             <h2>Skills &amp; Technical Experience</h2>
             <ul class="skills inline separator-comma">
                 <li class="technical lulu ibiblio unclib-systems newfangled sheps berg">PHP</li>
+                <li class="technical sana">Ruby</li>
+                <li class="technical viget lulu unclib-systems newfangled sheps berg sana">JavaScript</li>
                 <li class="technical unclib-systems sheps berg">Python</li>
-                <li class="technical viget lulu unclib-systems newfangled sheps berg">JavaScript</li>
-                <li class="technical viget lulu ibiblio unclib-systems newfangled sheps berg">HTML 5</li>
-                <li class="technical viget lulu ibiblio unclib-systems newfangled sheps berg">CSS</li>
+                <li class="technical viget lulu ibiblio unclib-systems newfangled sheps berg sana">HTML 5</li>
+                <li class="technical viget lulu ibiblio unclib-systems newfangled sheps berg sana">CSS</li>
                 <li class="technical ibiblio unclib-systems newfangled sheps berg">MySQL</li>
+                <li class="technical sana">PostgreSQL</li>
                 <li class="technical sheps berg">Redis</li>
                 <li class="technical sheps berg">Apache Kafka</li>
                 <li class="technical sheps berg">Laravel</li>
+                <li class="technical sheps sana">Rails</li>
                 <li class="technical unclib-systems">Django</li>
                 <li class="technical berg">FastAPI</li>
                 <li class="technical sheps">Vue.js</li>
+                <li class="technical sheps">React.js</li>
                 <li class="technical sheps berg">Docker</li>
                 <li class="technical sheps berg">OpenShift/Kubernetes</li>
                 <li class="technical sheps">Git</li>
                 <li class="technical sheps">Mercurial</li>
                 <li class="technical sheps">Vagrant</li>
-                <li class="technical lulu ibiblio unclib-systems">Test Driven Development</li>
-                <li class="technical lulu ibiblio unclib-systems">Software design</li>
+                <li class="technical sheps berg sana">Test Driven Development</li>
+                <li class="technical lulu ibiblio unclib-systems sheps berg sana">Software design</li>
                 <li class="ux viget lulu ibiblio unclib-systems">User centered design</li>
                 <li class="ux viget lulu ibiblio unclib-systems">User needs analysis</li>
                 <li class="ux viget lulu ibiblio unclib-systems">Information architecture</li>
