--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <dd>
                         <ul>
                             <li class="achievement">
-                                Reduced cost-to-serve Sana customers by 13% through task automation and addition of 
+                                Reduced cost-to-serve Sana customers by 13% through task automation and addition of new customer-facing features. 
                             </li>
                             <li>Automated 95% of the customer onboarding process.</li>
                         </ul>
