fixes to Sana entry

--- a/index.html
+++ b/index.html
@@ -53,16 +53,19 @@
                         </div>
                     </dt>
                     <dd>
+                        <p>
+                            Scope, design, and implement internal and costumer facing features for a health insurance startup using Ruby on Rails and React.
+                        </p>
                         <ul>
                             <li class="achievement">
-                                Reduced cost-to-serve Sana customers by 13% through task automation and addition of new customer-facing features. 
+                                Reduced cost-to-serve Sana customers by 13% through task automation and addition of new customer-facing features
                             </li>
-                            <li>Automated 95% of the customer onboarding process.</li>
+                            <li>Automated 95% of the customer onboarding process</li>
                         </ul>
                         <ul>
                             <li>Development of new user-facing and internal features using Ruby, Javascript, HTML and CSS</li>
                             <li>Technical leadership and direction of a team of seven junior and mid-level engineers</li>
-                            <li>Collaboration with product, design, and operations to design and scope new features and improvements.</li>
+                            <li>Collaboration with product, design, and operations to design and scope new features and improvements</li>
                         </ul>
                     </dd>
                 </div>
@@ -72,7 +75,7 @@
                         <p class="print-url">https://www.med.unc.edu/genetics/berglab/</p>
                         <div>
                             <h3 class="job-title">Senior Developer</h3>
-                            <span class="date-range">February 2020 - Present</span>
+                            <span class="date-range">February 2020 - October 2022</span>
                         </div>
                     </dt>
                     <dd>
