Add link in readme. edit lulu entry.

--- a/index.html
+++ b/index.html
@@ -201,11 +201,9 @@
                             Designed and developed user-facing products for a self-publishing start-up.
                         </p>
                         <ul> 
-                          <li>Conduct user research to determine user needs</li> 
-                          <li>Work with software engineers, graphic designers, and stakeholders to design software services and applications for Lulu.com users</li> 
-                          <li>Conduct user testing to assess usability and user perceptions</li> 
-                          <li>Monitor analytics data to evaluate efficacy of iterative design changes</li> 
-                          <li>Implement design for web browsers using XHTML, CSS, JavaScript, and Adobe Flex</li> 
+                          <li>User research and needs analysis</li> 
+                          <li>UX design and evaluation of user-facing features</li> 
+                          <li>Implement design for web browsers using PHP, HTML, CSS, JavaScript, and Adobe Flex</li> 
                         </ul> 
                     </dd>
                 </div>
