--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
                     </dt>
                     <dd>
                         <p>
-                            Scope, design, and implement internal and costumer facing features for a health insurance startup using Ruby on Rails and React.
+                            Scope, design, and implement internal and costumer-facing features for a health insurance startup, using Ruby on Rails and React.
                         </p>
                         <ul>
                             <li class="achievement">
-                                Reduced cost-to-serve Sana customers by 13% through task automation and addition of new customer-facing features
+                                Reduced cost-to-serve Sana customers by 13% through task automation and the addition of new customer-facing features
                             </li>
                             <li>Automated 95% of the customer onboarding process</li>
                         </ul>
                         <ul>
-                            <li>Development of new user-facing and internal features using Ruby, Javascript, HTML and CSS</li>
+                            <li>Development of new user-facing and internal features using Ruby, Javascript, HTML, and CSS</li>
                             <li>Technical leadership and direction of a team of seven junior and mid-level engineers</li>
                             <li>Collaboration with product, design, and operations to design and scope new features and improvements</li>
                         </ul>
@@ -80,7 +80,7 @@
                     </dt>
                     <dd>
                         <p>
-                            Research, design, and build custom business solutions for an NIH funded consortium using web-standards, PHP, Python, Kubernetes, Apache Kafka, and other technologies.
+                            Research, design, and build custom business solutions for an NIH-funded consortium using web standards, PHP, Python, Kubernetes, Apache Kafka, and other technologies.
                         </p>
                         <ul>
                             <li class="achievement">
