--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
                         <p>
                             Designed and developed user-facing products for a self-publishing start-up.
                         </p>
-                        <ul> 
+                        <!-- <ul> 
                           <li>User research and needs analysis</li> 
                           <li>UX design and evaluation of user-facing features</li> 
                           <li>Implement design for web browsers using PHP, HTML, CSS, JavaScript, and Adobe Flex</li> 
-                        </ul> 
+                        </ul>  -->
                     </dd>
                 </div>
                 <div class="item ibiblio old">
@@ -218,11 +218,8 @@
                     </dt>
                     <dd>
                         <p>
-                            Designed, built, and supported web applications.
+                            Research, development, and execution of new technologies and applications including RSS, podcasting, blogging software and BitTorrent.
                         </p>
-                        <ul> 
-                          <li>Research, development, and execution of new technologies and applications including RSS, podcasting, blogging software and BitTorrent</li> 
-                        </ul> 
                     </dd>
                 </div>
                 <div class="item unclib old">
@@ -238,11 +235,11 @@
                         <p>
                             Designed, developed, and supported web-based applications for library staff and patrons using PHP, MySQL, PERL, JavaScript, XML, and HTML.
                         </p>
-                        <ul> 
+                        <!-- <ul> 
                           <li>Research and design information retrieval applications for library staff and patrons</li>
                           <li>Development and support of applications using PHP, MySQL, PERL, JavaScript, XML, and HTML</li> 
                           <li>Investigation and application of new technologies</li> 
-                        </ul> 
+                        </ul>  -->
                     </dd>
                 </div>
                 <div class="item unclib-mrc old">
@@ -258,12 +255,12 @@
                         <p>
                             Developed a web accessible database-driven application to help library patrons browse UNC Library's non-print collection.
                         </p>
-                        <ul> 
+                        <!-- <ul> 
                           <li>Development and support of web database applications for the Media Resources Center.
                           </li> 
                           <li>Workflow analysis and streamlining.
                           </li> 
-                        </ul> 
+                        </ul>  -->
                     </dd>
                 </div>
             </dl>
@@ -298,7 +295,7 @@
                         A system to onboard and track assignment, training, and attestations of volunteer bio-curators for the NIH funded Clinical Genome Project. 
                     </div>
                 </li>
-                <li class="item sheps">
+                <!-- <li class="item sheps">
                     <div class="project-title">
                         <a href="https://bitbucket.org/shepsweb/sirs-surveys" target="new">sirs\surveys</a>
                         <p class="print-url">https://bitbucket.org/shepsweb/sirs-surveys</p>
@@ -306,7 +303,7 @@
                     <p class="activities">                    
                         A Laravel package to facilitate the development of surveys with flexible workflows.
                     </p>
-                </li>
+                </li> -->
                 <!-- <li class="item sheps">
                     <div class="project-title">
                         <a href="https://bitbucket.org/shepsweb/sirs-surveys" target="new">sirs\tasks</a>
