Update acheivements for sana

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
                         </p>
                         <ul>
                             <li class="achievement">
-                                Reduced cost-to-serve Sana customers by 13% through task automation and the addition of new customer-facing features
+                                Reduced cost-to-serve Sana customers by ~20% through task automation and new customer-facing features
                             </li>
-                            <li>Automated 95% of the customer onboarding process</li>
+                            <li>
+                                Reduced time to onboard new customers by ~75% through task automation and new customer-facing features
+                            </li>
                         </ul>
                         <ul>
                             <li>Development of new user-facing and internal features using Ruby, Javascript, HTML, and CSS</li>
