--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </dt>
                     <dd>
                         <p>
-                            Scope, design, and implement internal and costumer-facing features for a health insurance startup, using Ruby on Rails and React.
+                            Scope, design, and implement internal and customer-facing features for a health insurance startup, using Ruby on Rails and React.
                         </p>
                         <ul>
                             <li class="achievement">
